# tech-terrarium

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.Dockerfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml
_administration/: docker-compose.yaml
_administration/homepage/config/: services.yaml  settings.yaml  widgets.yaml
admin/: README.md  docker-compose.yaml
admin/cli/: __main__.py
admin/homepage/: Dockerfile
admin/homepage/config/: bookmarks.yaml  services.yaml  settings.yaml  widgets.yaml
airflow/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
airflow/dags/_examples/: ex_kafka_dag.py  ex_mongo_dag.py  ex_postgres_dag.py
airflow/dags/dbt_postgres/: dag.py  dbt_project.yml
airflow/dags/etl/: ksql_to_postgres.py
datahub/: README.md  docker-compose.yaml
datahub/ingestion/: Dockerfile  crontab  do_ingestion.sh
datahub/ingestion/ingestion_configs/: kafka_connect.yaml  kafka_ingestion.yaml  metabase.yaml  mongo.yaml  mongo_datagen.yaml  postgres.yaml  postgres_datagen.yaml  postgres_default.yaml
dbt_postgres/models/example/: schema.yml
doc/: README.md
docs/: Getting_Started.md  README.md  References.md  data_warehouse_vs_lake.md  diagrams.md  getting_started.md  index.md  services.md
docs/examples/: kafka.ipynb
docs/notes/: data_warehouse_vs_lake.md
docs/services/: airflow.md  alternative_data_catalogs.md  application_framework.md  bi_tools.md  data_catalog.md  data_store.md  data_stream.md  datahub.md  dbt.md  fastapi_app.md  feast.md  greate_expections.md  kafka.md  machine_learning.md  metabase.md  mlflow.md  mongodb.md  openmetadata.md  orchestration.md  overview.md  postgres.md  query_engine.md  scrubbed_services.md  spark.md
examples/kafka/: index.html
fastapi/src/: __main__.py  audit.py  audit_v1.py  audit_v2.py  models.py
fastapi/tests/: test_audit.py
fastapi_app/: Dockerfile  README.md  docker-compose.yaml  requirements.txt  sbx.py
fastapi_app/src/: __main__.py  audit.py
fastapi_app/tests/functional/: test_audit.py
feast/: README.md  docker-compose.yaml
getting_started/: index.html
great_expectations/: README.md
great_expectations_on_airflow/: Dockerfile  README.md  docker-compose.yaml  init.sh  requirements.txt
great_expectations_on_airflow/dags/: example_great_expectations_dag.py  sandbox.py
kafka/: README.md  connect-startup.sh  docker-compose.yaml  kafka-connect.Dockerfile
kafka/connect/: Dockerfile  startup.sh
kafka/python_sandbox/: producer_sbx.py  schema_sbx.py
kafka/src/: schema_sbx.py
metabase/: README.md  docker-compose.yaml
metabase/metabase_data/metabase.db/: metabase.db.mv.db  (+1 more)
mlflow/: README.md  docker-compose.yaml
mongo/: README.md  docker-compose.yaml
mongo/mongo_init/: init.js
notes/data_warehouse_vs_lake/: index.html
postgres/: README.md  docker-compose.yaml  pg_init.sql  servers.json
redis/: docker-compose.yaml
references/: index.html
search/: search_index.json
services/airflow/: index.html
services/datahub/: index.html
services/dbt/: index.html
services/fastapi_app/: index.html
services/feast/: index.html
services/great_expectations/: index.html
services/kafka/: index.html
services/metabase/: index.html
services/mlflow/: index.html
services/mongodb/: index.html
services/overview/: index.html
services/postgres/: index.html
services/scrubbed_services/: index.html
services/spark/: index.html
trino/: Dockerfile  README.md  docker-compose.yaml
trino/catalog/: kafka.properties  postgres.properties  redis.properties
(+14 files in other folders)
