[tool.poetry]
name = "tech-terrarium"
version = "0.1.0"
description = "A compact and hands-on data-engineering tech stack simulation environment for learning and development."
license = "MIT"
authors = ["Foehammer82 <foehammer@nowhere.com>"]
readme = "docs/README.md"
homepage = "https://foehammer82.github.io/tech-terrarium/"
repository = "https://github.com/Foehammer82/tech-terrarium"
packages = [{ include = "cli", from = "admin", to = "cli"}]

[tool.poetry.scripts]
terrarium = "cli.__main__:app"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = { extras = ["avro"], version = "^2.4.0" }
pydantic = "^2.8.0"
jupyter = "^1.0.0"
pyarrow = { version = ">16", extras = ["avro"] }
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
loguru = "^0.7.2"
py-avro-schema = "^3"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"
poetry-plugin-export = "^1.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.5.post1"
faker = "^25.2.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.24"
mkdocs-jupyter = "^0.24.7"
mkdocs-awesome-pages-plugin = "^2.9.2"

[tool.poetry.group.dbt.dependencies]
dbt-core = "^1.8.1"
dbt-postgres = "^1.8.1"

[tool.poetry.group.ge.dependencies]
great-expectations = "^0.18.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
