[tool.poetry]
name = "tech-terrarium"
version = "0.1.0"
description = "A compact and hands-on data-engineering tech stack simulation environment for learning and development."
license = "MIT"
authors = ["Foehammer82 <foehammer@nowhere.com>"]
readme = "docs/README.md"
homepage = "https://foehammer82.github.io/tech-terrarium/"
repository = "https://github.com/Foehammer82/tech-terrarium"
packages = [{ include = "cli", from = "admin", to = "cli"}]

[tool.poetry.scripts]
terrarium = "cli.__main__:app"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = { extras = ["avro"], version = "^2.4" }
pydantic = "^2.7"
jupyter = "^1.0"
pyarrow = { version = ">16", extras = ["avro"] }
fastapi = "^0.111"
uvicorn = "^0.30"
loguru = "^0.7"
py-avro-schema = "^3"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
pre-commit = "^3.7"
poetry-plugin-export = "^1.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
faker = "^26.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5"
mkdocs-jupyter = "^0.24"
mkdocs-awesome-pages-plugin = "^2.9"

[tool.poetry.group.dbt.dependencies]
dbt-core = "^1.8"
dbt-postgres = "^1.8"

[tool.poetry.group.ge.dependencies]
great-expectations = "^0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
